parent 74646b267c9705ff7964b0d761ff16bc724b03b3 author Aritra Sur Roy <32236407+Roy19@users.noreply.github.com> 1603649528 +0530 committer Aritra Sur Roy <aritra1997@hotmail.com> 1603705638 +0530
Add build and pack action in github

Publish artifact

Publish artifact as zip

Fix build pipeline issues

* Added versioning to package
* Added cake build script
* Modify github action workflow to use cake build script

Add delete product action

--- a/ContosoPets.Api.csproj
+++ b/ContosoPets.Api.csproj
@@ -2,7 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <IsPackable>true</IsPackable>
+    <Version>1.0.0</Version>
+    <AssemblyName>ContosoPets.Api</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
