--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,9 +4,7 @@ on: [push, pull_request]
   
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET Core
@@ -21,3 +19,9 @@ jobs:
       run: dotnet publish --configuration Release --runtime win-x64
     - name: Package
       run: dotnet pack --configuration Release --no-build
+    - uses: actions/upload-artifact@v2
+      with:
+        name: ContosoPets.Api
+        path: /home/runner/work/ContosoPets.Api/ContosoPets.Api/bin/Release/ContosoPets.Api.1.0.0.nupkg
+
+
