--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build and pack project
+name: Build, pack and release project
 
 on: [push, pull_request]
   
@@ -14,10 +14,18 @@ jobs:
         dotnet-version: 3.1.301
     - name: Build
       run: chmod 777 /home/runner/work/ContosoPets.Api/ContosoPets.Api/build.sh && /home/runner/work/ContosoPets.Api/ContosoPets.Api/build.sh
+      shell: bash
     - name: Upload artifact
       uses: actions/upload-artifact@v2
       with:
         name: ContosoPets.Api
         path: /home/runner/work/ContosoPets.Api/ContosoPets.Api/dist/ContosoPets.Api.*.nupkg
+  release:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - name: Release artifact to github nuget
+      run: /home/runner/work/ContosoPets.Api/ContosoPets.Api/build.sh -t Release -API-Key ${{ secrets.GITHUB_TOKEN }}
+      shell: bash
 
 
