--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Build, pack and release project
 on: [push, pull_request]
   
 jobs:
-  build:
+  build_pack_release:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -13,7 +13,11 @@ jobs:
       with:
         dotnet-version: 3.1.301
     - name: Build
-      run: chmod 777 /home/runner/work/ContosoPets.Api/ContosoPets.Api/build.sh && /home/runner/work/ContosoPets.Api/ContosoPets.Api/build.sh
+      run: |
+        chmod +x /home/runner/work/ContosoPets.Api/ContosoPets.Api/build.sh
+        /home/runner/work/ContosoPets.Api/ContosoPets.Api/build.sh --target=CI --API-Key=${{env.NUGET_GPR_KEY}}
+      env:
+        NUGET_GPR_KEY: ${{secrets.NUGET_GPR}}
       shell: bash
     - name: Upload artifact
       uses: actions/upload-artifact@v2
@@ -22,8 +26,6 @@ jobs:
         path: /home/runner/work/ContosoPets.Api/ContosoPets.Api/dist/ContosoPets.Api.*.nupkg
     - name: Release artifact to github nuget
       run: dotnet nuget push "./dist/ContosoPets.Api.*.nupkg" -s "https://nuget.pkg.github.com/Roy19/index.json" -k ${{env.NUGET_GPR_KEY}} --skip-duplicate
-      env:
-        NUGET_GPR_KEY: ${{secrets.NUGET_GPR}}
     
 
 
