Fix build issues

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,16 @@ jobs:
     - name: Get branch name
       uses: nelonoel/branch-name@v1 
     - name: Build, Pack and Release
-      run: chmod +x ./build-pipeline.sh && ./build-pipeline.sh
+      run: |
+        chmod +x /home/runner/work/ContosoPets.Api/ContosoPets.Api/build.sh
+        RELEASE_BRANCH=master
+        echo "Branch: $BRANCH_NAME"
+        if [ $BRANCH_NAME = $RELEASE_BRANCH ]
+          then
+            /home/runner/work/ContosoPets.Api/ContosoPets.Api/build.sh --target=CI --Branch-Name=master --API-Key=${{env.NUGET_GPR_KEY}}
+          else
+            /home/runner/work/ContosoPets.Api/ContosoPets.Api/build.sh --target=CI --Branch-Name=$BRANCH_NAME --Build-Number=${GITHUB_RUN_NUMBER} --API-Key=${{env.NUGET_GPR_KEY}}
+        fi
       env:
         NUGET_GPR_KEY: ${{secrets.NUGET_GPR}}
       shell: bash
